# xbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  OPTIMIZATION_SUMMARY.md  README.md  a.patch  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  test_chat.py  test_rss.py  xbot.db
config/: __init__.py  advanced.py
memory/: __init__.py  base.py  service.py  store.py
security/: __init__.py  mount_allowlist.py
server/: exceptions.py  settings.py  utils.py
server/ai/: chat_llm.py  llm.py  schema.py
server/ai/agents/: base.py  report.py  (+1 more)
server/analysis/: __init__.py  config.py  correlation.py  types.py
server/bot/: bot_protocol.py  chat.py  chat_handlers.py  commands.py  dispatcher.py  feishu.py  feishu_adapter.py  feishu_dispatcher.py  feishu_runner.py  feishu_server.py  feishu_v2.py  formatter.py  telegram.py  telegram_adapter.py
server/channels/: __init__.py  base.py  feishu.py  registry.py  telegram.py
server/datasource/: base.py  config.json  scheduler.py  source_manager.py  sources.yaml
server/datastore/: __init__.py  engine.py  migrations.py  models.py  pool.py  repositories.py
server/hooks/: __init__.py  base.py  manager.py
server/ipc/: __init__.py  manager.py  protocol.py
server/queue/: __init__.py  message_queue.py
server/reports/: __init__.py  generator.py  templates.py
server/services/: __init__.py  cache.py  circuit_breaker.py  client.py  deduplicator.py  errors.py  news_aggregator.py  news_processor.py  watchlist.py
skills/: __init__.py  applier.py  manager.py  parser.py  protocol.py
(+17 files in other folders)
