[project]
name = "xbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "lark-oapi>=1.5.3",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.13.0",
    "pyright>=1.1.407",
    "python-dateutil>=2.9.0",
    "python-telegram-bot>=22.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.34.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

